--- a/istorija.html
+++ b/istorija.html
@@ -99,7 +99,7 @@ section::after {
 </style>
 </head>
 <body>
-<button class="button button2" onclick="document.location='pocetna.html'">О селу</button>
+<button class="button button2" onclick="document.location='index.html'">О селу</button>
 <br>
 <button class="button">Историјат села</button>
 <br>
