--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ section::after {
     <h1 id="naslov1">О селу</h1>
     <p>Горња Јошаница је село смештено на јужној падини планине Јастребац,на излазу из котлине Јошанске реке.</p>
     <p>Припада општини Блаце.</p>
-    <p>Налази се 12 километара североисточно од Блаца,око 30 километара јужно од Крушевца и око 30 километара цеверозападно од Прокупља.</p>
+    <p>Налази се 12 километара североисточно од Блаца,око 30 километара јужно од Крушевца и око 30 километара северозападно од Прокупља.</p>
     <p>У селу је најзаступљенији узгој шљива.</p>
     <p>Верује се да назив потиче од двоје одметника Ане и Јове који су ту тајно водили љубав те је Јова говорио:“Још,Анице,...“ и тако настало Јошаница.</p>
   </article>
